--- a/SpringBoot/Layout(+공통JS_CSS관리)/src/main/resources/templates/views/content.html
+++ b/SpringBoot/Layout(+공통JS_CSS관리)/src/main/resources/templates/views/content.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org"
+<html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="layout/default">
-<th:block layout:fragment="css"></th:block>
-<th:block layout:fragment="script">
-    <script type="text/javascript" th:inline="javascript">
-        /*커스텀 script*/
-    </script>
-</th:block>
+
+<!--<th:block layout:fragment="css"></th:block>-->
+<!--<th:block layout:fragment="script">-->
+<!--    <script type="text/javascript" th:inline="javascript">-->
+<!--        /*커스텀 script*/-->
+<!--    </script>-->
+<!--</th:block>-->
 <div layout:fragment="content">
 콘텐츠 입니다.
 </div>
